# API-bookstore

./: .gitignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  user_create.sh
.github/workflows/: build.yaml  build.yml  workflow-pr.yaml
bookstore/: settings.py  urls.py
order/: admin.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/: test_oder.py
order/viewsets/: order_viewset.py
product/: admin.py  tests.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/: test_category.py  test_product.py
product/viewsets/: category_viewset.py  product_viewset.py
